separate InspectService
